@@ -1,12 +1,0 @@
-The email package is a library for managing email messages,
-including MIME and other RFC 2822-based message documents.  It is
-intended to replace most of the functionality in several older
-standard modules such as rfc822, mimetools, multifile, mimify, and
-MIMEWriter, and other non-standard packages such as mimecntl.  It
-is compliant with most of the email related RFCs such as 2045-2047
-(the MIME RFCs) and 2231.
-
-This version is identical to the package available in the Python
-2.3 cvs development tree.  It is being made available as a
-standalone distutils package for use in older Python releases.  A
-minimum of Python 2.1 is required.
